# net-config-repo

./: .gitignore  LICENSE  README.md  conf.py  db.py  device.py  docker-compose.yml  get_config.py  get_hostname.py  hosts.py  main.py  manage.py  pyvenv.cfg  requirements.txt  start-dev.ps1  utils.py
.github/workflows/: python-package.yml
backend/: Dockerfile  alembic.ini  conf.py  db.py  get_config.py  get_hostname.py  hosts.py  main.py  manage.py  pyproject.toml  requirements.txt  utils.py
backend/alembic/: env.py
backend/alembic/versions/: 4fe4c7f746c8_add_fetch_jobs_table.py  5217575c3dae_add_detailed_log_to_scanjobs.py  93cb7801605f_add_logs_table.py  b9b70cb7cec9_initial_migration.py  bbca3cdeedca_add_scanjobs.py  e5fe17f6b836_add_configversions_and_settings.py
backend/vendors/: __init__.py  aruba_aoscx.py  cisco_ios.py  hp_procurve.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/router/: index.js
frontend/src/views/: AddDeviceView.vue  ConfigsView.vue  DashboardView.vue  DevicesView.vue  FetchConfigsView.vue  LogsView.vue  ScansView.vue
vendors/: __init__.py  aruba_aoscx.py  hp_procurve.py
